# personalOS

./: .gitignore  AI_WORKBENCH_DESIGN.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  VERIFICATION.md  build-app.js  deploy.js  index.html  package-lock.json  package.json  start.js  vite.config.ts
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: auth.rs  backup.rs  doclib.rs  documents.rs  finance.rs  investments.rs  mod.rs  notes.rs  people.rs  portfolio.rs  search.rs  settings.rs  tasks.rs  timeline.rs  vault.rs
src/components/: charts.tsx  ui.tsx
src/lib/: format.ts  passwordGen.ts
src/modules/: Dashboard.tsx  DocumentLibrary.tsx  Finance.tsx  Investments.tsx  LockScreen.tsx  Notes.tsx  People.tsx  Portfolio.tsx  QuickCapture.tsx  Settings.tsx  UniversalSearch.tsx  Vault.tsx
src/modules/workbench/: CardEditor.tsx  ChatView.tsx  Chats.tsx  Home.tsx  Library.tsx  PromptLaunch.tsx  Workbench.tsx  mockData.ts  types.ts
tests/: e2e.mjs
