[package]
name = "personalos"
version = "1.0.0"
description = "PersonalOS - offline-first personal dashboard, vault, finance and notes"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zeroize = "1"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lib]
name = "personalos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
